# ros_vscode_issue_example

src/example/: CMakeLists.txt  package.xml  setup.py
src/example/src/my_package/util/: utils.py
src/other_package/: CMakeLists.txt  package.xml
src/other_package/src/: executable.py
