<?xml version="1.0"?>
<package format="2">
  <name>example</name>
  <version>0.0.0</version>
  <description>The example package</description>

  <maintainer email="filip@todo.todo">filip</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
